source/blender/editors/space_view3d/space_view3d.c
@@ -632,8 +632,7 @@ static void view3d_recalc_used_layers(ARegion *ar, wmNotifier *wmn, Scene *scene
 
 static void view3d_main_area_listener(ARegion *ar, wmNotifier *wmn)
 {
-	bScreen *sc;
-
+	
 	/* context changes */
 	switch (wmn->category) {
 		case NC_ANIMATION:
@@ -656,7 +655,8 @@ static void view3d_main_area_listener(ARegion *ar, wmNotifier *wmn)
 		case NC_SCENE:
 			switch (wmn->data) {
 				case ND_LAYER_CONTENT:
-					view3d_recalc_used_layers(ar, wmn, wmn->reference);
+					if (wmn->reference)
+						view3d_recalc_used_layers(ar, wmn, wmn->reference);
 					ED_region_tag_redraw(ar);
 					break;
 				case ND_FRAME:
@@ -784,8 +784,10 @@ static void view3d_main_area_listener(ARegion *ar, wmNotifier *wmn)
 				case ND_SCREENSET:
 					/* screen was changed, need to update used layers due to NC_SCENE|ND_LAYER_CONTENT */
 					/* updates used layers only for View3D in active screen */
-					sc = wmn->reference;
-					view3d_recalc_used_layers(ar, wmn, sc->scene);
+					if (wmn->reference) {
+						bScreen *sc = wmn->reference;
+						view3d_recalc_used_layers(ar, wmn, sc->scene);
+					}
 					ED_region_tag_redraw(ar);
 					break;
 			}
